--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
             <label>Date of birth : </label> 
             <input type="Date" placeholder="Enter Date of birth" name="Date" required>
             <label>Gender : </label> 
-            <input type="Gender" placeholder="Enter Date of birth" name="Gender" required>
+            <input type="Gender" placeholder="Enter Gender" name="Gender" required>
         </div>
 
       <button onclick="onUserLogin()">login</button>
