--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agre
             <label>E-mail id : </label> 
             <input type="email" placeholder="Enter E-mail id" name="email" required>
             <label>Date of birth : </label> 
-            <input type="Date" placeholder="Enter Date of birth" name="Date" required>
+            <input type="Date" placeholder="Enter Date of birth" name="date" required>
             <label>Gender : </label> 
-            <input type="Gender" placeholder="Enter Gender" name="Gender" required>
+            <input type="Gender" placeholder="Enter Date of birth" name="Gender" required>
         </div>
 
       <button onclick="onUserLogin()">login</button>
@@ -102,17 +102,7 @@ console.log("Ok button created")
 
 
 </script>
+</form>
 </body>
 </head>
-
-
-
-
-
-
-
-
-
-
-
-
+</html>
