--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ console.log("profile successfully pushed")
             <label>Date of birth : </label> 
             <input type="Date" placeholder="Enter Date of birth" name="date" required>
             <label>Gender : </label> 
-            <input type="Gender" placeholder="Enter Date of birth" name="Gender" required>
+            <input type="Gender" placeholder="Enter Gender" name="Gender" required>
         </div>
 
       <button onclick="onUserLogin()">login</button>
