--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ function loginfunction() {
 </script>
 
     <center> <h1> Login Form </h1> </center>
-    <form>
+     <div>
+     <form>
                 <div class=“container”>
                     <input type=“text” name=“” id=‘name’ placeholder=“Enter your Name”>
                 </div>
@@ -93,6 +94,7 @@ function loginfunction() {
                 <button onclick=“raiseeventfunction()“>Raise event</button>
 
             </form>
+          </div>
      
      </body>
 </head>
