--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@ function loginfunction() {
     <center> <h1> Login Form </h1> </center>
      <div>
      <form>
-                <div class=“container”>
+                <div>
                     <input type=“text” name=“” id=‘name’ placeholder=“Enter your Name”>
                 </div>
-                <div class=“container”>
+                <div>
                     <input type=“email” name=“” id=‘email’ placeholder=“Enter your Email Address”>
                 </div>
-                <div class=“container”>
+                <div>
                     <input type=“tel” name=“” id=‘tel’ placeholder=“Enter your Phone number”>
                 </div>
-                <div class=“container”>
+                <div>
                     <input type=“text” name=“” id=‘dob’ placeholder=“Enter your Date of Birth”
                         onfocus=“(this.type=‘date’)“>
                 </div>
