--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ function loginfunction() {
         console.log(name + "::" + email + "::" + phone + "::" + dob)
         console.log("The login event is called")
         clevertap.onUserLogin.push({
-            “Site”: {
+            "Site": {
                 “Name”: name,            // use the Name variable
                 “Email”: email,         // Email address of the user
                 “Phone”: phone,           // Phone (with the country code
