--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html> 
 <html lang="en">
      <head>
-     <meta charset=“UTF-8”>
-     <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
-     <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
-     <script type=“text/javascript”>
-        var clevertap = { event: [], profile: [], account: [], onUserLogin: [], notifications: [], privacy: [] };
-        // replace with the CLEVERTAP_ACCOUNT_ID with the actual ACCOUNT ID value from your Dashboard -> Settings page
-        clevertap.account.push({"id": "848-6W8-9R6Z"});
-        clevertap.privacy.push({ optOut: false }); //set the flag to true, if the user of the device opts out of sharing their data
-        clevertap.privacy.push({ useIP: false }); //set the flag to true, if the user agrees to share their IP data
-        (function () {
-            var wzrk = document.createElement(‘script’);
-            wzrk.type = ‘text/javascript’;
-            wzrk.async = true;
-            wzrk.src = (‘https:’ == document.location.protocol ? ‘https://d2r1yp2w7bby2u.cloudfront.net’ : ‘http://static.clevertap.com’) + ‘/js/a.js’;
-            var s = document.getElementsByTagName(‘script’)[0];
-            s.parentNode.insertBefore(wzrk, s);
-        })();
-     </script> 
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+   <script 
+     type="text/javascript">
+     var clevertap = {event:[], profile:[], account:[], onUserLogin:[], notifications:[], privacy:[]};
+     clevertap.account.push({"id": "848-6W8-9R6Z"});
+     clevertap.privacy.push({optOut: false}); //set the flag to true, if the user of the device opts out of sharing their data
+     clevertap.privacy.push({useIP: false}); //set the flag to true, if the user agrees to share their IP data
+     (function () {
+         var wzrk = document.createElement('script');
+         wzrk.type = 'text/javascript';
+         wzrk.async = true;
+         wzrk.src = ('https:' == document.location.protocol ? 'https://d2r1yp2w7bby2u.cloudfront.net' : 'http://static.clevertap.com') + '/js/a.js';
+         var s = document.getElementsByTagName('script')[0];
+         s.parentNode.insertBefore(wzrk, s);
+          })();
+    </script>
      </head>
 <body>
     <center> <h1> Login Form </h1> </center>
@@ -57,10 +57,10 @@ function loginfunction() {
         console.log("The login event is called")
         clevertap.onUserLogin.push({
             "Site": {
-                “Name”: name,            // use the Name variable
-                “Email”: email,         // Email address of the user
-                “Phone”: phone,           // Phone (with the country code
-                “DOB”: new Date()                 // Date of Birth. Date object
+                "Name": name,            // use the Name variable
+                "Email": email,         // Email address of the user
+                "Phone": phone,           // Phone (with the country code
+                "DOB": new Date()                 // Date of Birth. Date object
             }
         });
     };
@@ -72,11 +72,11 @@ function loginfunction() {
         console.log(name + "::" + email + "::" + phone + "::" + dob)
         console.log("The profile push event is called")
         clevertap.profile.push({
-            “Site”: {
-                “Name”: name,            // use the Name variable
-                “Email”: email,         // Email address of the user
-                “Phone”: phone,           // Phone (with the country code
-                “DOB”: new Date()                 // Date of Birth. Date object
+            "Site": {
+                "Name": name,            // use the Name variable
+                "Email": email,         // Email address of the user
+                "Phone": phone,           // Phone (with the country code
+                "DOB": new Date()                 // Date of Birth. Date object
             }
         });
     }
