--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <input type="tel" name="" id="tel" placeholder= "Enter your Phone number">
                 </div>
                 <div>
-                    <input type="text" name="" id="dob" placeholder= "Enter your Date of Birth" onfocus="(this.type="date")">
+                    <input type="text" name="" id="dob" placeholder= "Enter your Date of Birth" onfocus="(this.type='date')">
                 </div>
                 <button onclick="loginfunction()">Login event</button>
                 <button onclick="profilepushfunction()">Profile Push</button>
